--- a/style.css
+++ b/style.css
@@ -914,9 +914,9 @@ body {
 
 
 
-/* ---------------------------FEATURED PRODUCTS SECTION START--------------------------- */
-/* ---------------------------FEATURED PRODUCTS SECTION START--------------------------- */
-/* ---------------------------FEATURED PRODUCTS SECTION START--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION START--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION START--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION START--------------------------- */
 #featured-products-and-add-to-cart-section {
     margin-top: 120px;
 }
@@ -1741,9 +1741,9 @@ body {
 /* ==========================
     SHOPPING CART AREA END
 ============================ */
-/* ---------------------------FEATURED PRODUCTS SECTION END--------------------------- */
-/* ---------------------------FEATURED PRODUCTS SECTION END--------------------------- */
-/* ---------------------------FEATURED PRODUCTS SECTION END--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION END--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION END--------------------------- */
+/* ---------------------------FEATURED PRODUCTS AND ADD TO CART SECTION END--------------------------- */
 
 
 
