--- a/style.css
+++ b/style.css
@@ -111,6 +111,16 @@ body {
 /* ---------------------------LOGIN AND SIGNUP MODAL SECTION START--------------------------- */
 /* ---------------------------LOGIN AND SIGNUP MODAL SECTION START--------------------------- */
 /* ---------------------------LOGIN AND SIGNUP MODAL SECTION START--------------------------- */
+#signin-and-signup-modal-section .modal-content {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+#signin-and-signup-modal-section .modal-background {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    margin-right: 20px;
+}
 #signin-and-signup-modal-section .social-login {
     text-align: center;
 }
@@ -122,9 +132,10 @@ body {
 #signin-and-signup-modal-section .fa-brands {
     font-size: 2rem;
     margin-left: 25px;
+    color: white;
 }
 #signin-and-signup-modal-section .social-login > p {
-    color: #8c8c8c;
+    color: white;
     font-family: 'Work Sans', sans-serif;
 }
 #signin-and-signup-modal-section .signin-modal .nav-tabs .nav-link {
@@ -141,9 +152,11 @@ body {
     margin-bottom: 1rem;
     text-align: center;
 }
-#signin-and-signup-modal-section .nav-link {
+#signin-and-signup-modal-section button {
     width: 100%;
     font-family: 'Work Sans', sans-serif;
+    background-color: #459122;
+    border: none;
 }
 #signin-and-signup-modal-section .signin-modal .nav-tabs {
     border-bottom: none;
@@ -162,7 +175,7 @@ body {
 }
 #signin-and-signup-modal-section .signin-link {
     text-align: center;
-    color: #8c8c8c;
+    color: white;
     margin-top: 0.5rem;
 }
 #signin-and-signup-modal-section .forgot-link {
